[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "price"
version = "0.1.0"
description = "高速価格計算バッチ処理システム"
requires-python = ">=3.10"
dependencies = [
    "oracledb>=2.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
price = "price.main:main"

[tool.setuptools.packages.find]
where = ["src"]
